--- a/eventos/2007.html
+++ b/eventos/2007.html
@@ -15,7 +15,7 @@
         </tr>
         <tr>
             <td colspan = "3" align = "center">
-                <a href="index.html">Inicio</a> |
+                <a href="../index.html">Inicio</a> |
                 <a href="1969.html">ARPANET</a> |
                 <a href="1971.html">Primer Email</a> |
                 <a href="1983.html">DNS</a> |
