Update with comments

--- a/eventos/2007.html
+++ b/eventos/2007.html
@@ -7,13 +7,16 @@
 </head>
 <body>
     <h1>Internet Movil</h1>
+    <!-- Tabla principal con contenido -->
     <table border="1" width="800" align="center">
+        <!-- Fila superior con banner -->
         <tr>
             <td colspan = "3" align = "center">
                 <img src = "../images/NE.jpeg" alt="Nokia" width="200">
             </td>
         </tr>
         <tr>
+            <!-- Fila de navegación -->
             <td colspan = "3" align = "center">
                 <a href="../index.html">Inicio</a> |
                 <a href="1969.html">ARPANET</a> |
@@ -23,17 +26,19 @@
                 <a href="1998.html">Google</a> |
                 <a href="2007.html">Internet Movil</a>
             </td>
+            <!-- Fila de contenido con imágenes laterales -->
             <tr>
+                <!-- Imagen izquierda -->
                <td width = "150" valing = "top" aling = "center">
                 <img src = "../images/gta.png" alt="GTA" width="150"><br><br>
                </td>" 
-
+                <!-- Contenido central -->
                <td width="500" valign="top" align="center">
                     <h2>Internet Movil</h2>
                     <img src = "../images/iphone_1.png" alt="Nokia" width="200">
                     <p>Con el iPhone, Internet pasa al bolsillo de las personas.</p>
                </td>
-
+                <!-- Imagen derecha -->
                 <td width = "150" valing = "top" aling = "center">
                     <img src = "../images/fortnite.png" alt="Fortnite" width="150"><br><br>
                 </td>
