--- a/eventos/1969.html
+++ b/eventos/1969.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- Página de Historia: ARPANET (1969) -->
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <title>ARPANET - 1969</title>
 </head>
 <body>
     <h1>Internet Movil</h1>
+    <!-- Tabla principal con contenido -->
     <table border="1" width="800" align="center">
+        <!-- Fila superior con banner -->
         <tr>
             <td colspan = "3" align = "center">
                 <img src = "../images/arpa_banner.png" alt="Arpa" width="200">
             </td>
         </tr>
+        <!-- Fila de navegación -->
         <tr>
             <td colspan = "3" align = "center">
                 <a href="../index.html">Inicio</a> |
@@ -23,23 +27,26 @@
                 <a href="1998.html">Google</a> |
                 <a href="2007.html">Internet Movil</a>
             </td>
-            <tr>
-               <td width = "150" valing = "top" aling = "center">
-                <img src = "../images/gta.png" alt="GTA" width="150"><br><br>
-               </td>" 
-
-               <td width="500" valign="top" align="center">
-                    <h2>ARPANET</h2>
-                    <img src = "../images/Arpa.png" alt="Nokia" width="200">
-                    <p>ARPANET fue la primera red que permitió la comunicación entre computadoras ubicadas en diferentes lugares.</p>
-               </td>
-
-                <td width = "150" valing = "top" aling = "center">
-                    <img src = "../images/fortnite.png" alt="Fortnite" width="150"><br><br>
-                </td>
-            </tr>
         </tr>
-        
+        <!-- Fila de contenido con imágenes laterales -->
+        <tr>
+            <!-- Imagen izquierda -->
+            <td width = "150" valign = "top" align = "center">
+                <img src = "../images/gta.png" alt="GTA" width="150"><br><br>
+            </td>
+
+            <!-- Contenido central -->
+            <td width="500" valign="top" align="center">
+                <h2>ARPANET</h2>
+                <img src = "../images/Arpa.png" alt="ARPANET" width="200">
+                <p>ARPANET fue la primera red que permitió la comunicación entre computadoras ubicadas en diferentes lugares.</p>
+            </td>
+
+            <!-- Imagen derecha -->
+            <td width = "150" valign = "top" align = "center">
+                <img src = "../images/fortnite.png" alt="Fortnite" width="150"><br><br>
+            </td>
+        </tr>
     </table>
 </body>
 </html>
