Mini update for a test

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <tr>
             <td width="500" valign="top" align="center">
                 <h2>Bienvenido a la Línea de Tiempo</h2>
-                <p>Selecciona un evento para ver más detalles.</p>
+                <p>Selecciona un evento para ver más detalles sobre la Historia.</p>
             </td>
         </tr>
     </table>
